# terraform-aws-notify-teams

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readme-footer.md  .readme-header.md  .terraform-docs.yml  CHANGELOG.md  README.md  main.tf  outputs.tf  variables.tf  versions.tf
.chglog/: config.yml
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: release.yml
examples/cloudwatch-alerts-to-slack/: README.md  main.tf  outputs.tf
examples/cloudwatch-alerts-to-teams/: README.md  main.tf  outputs.tf  versions.tf
examples/notify-slack-simple/: README.md  main.tf  outputs.tf
examples/notify-teams-simple/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
functions/: .gitignore  .pyproject.toml  Pipfile  README.md  integration_test.py  notify_teams.py  notify_teams_test.py  pytest.ini.sample  requirements.txt
functions/snapshots/: snap_notify_teams_test.py
src/: .flake8  .int.env  .pyproject.toml  Pipfile  README.md  main.py  notify_teams.py  setup.cfg
src/notifyteams/: alarms_colors.py  notify_teams.py
src/scripts/: main.py
src/tests/: integration_test.py  notify_teams_test.py
src/tests/snapshots/: snap_notify_teams_test.py
