[metadata]
name = notifyteams
version = 1.0
description = A project which is supposed to send notifications to teams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trustedshops-public/terraform-aws-notify-teams/
author = Flroian Kauschke
author_email = florian.kauschke@trustedshops.de
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
include = notifyteams
